	0003 - op/loss.jl: Fix/test all losses.  Update comments del l.y.  No need for forw.  Just loss, which returns loss and sets gradient.  Check tmp use avoid alloc.  Retire/fix logploss, xentloss, percloss, scalloss. -- src/op/loss.jl: cleanup, move out of op.
	0003 use templated code for cuda kernels
	0011 example: yonatan: language learning model
	0012 example: aliya: try bit representation on ipa
	0070 ai-mtg: kernels and perceptrons. kperceptron.jl: reimplement within the new framework. perceptron and structured perceptron examples. perclossback: these should be scaled 1/nx, why isn't our gradient check complaining? reimplement averaging. for perceptron.
	0101 example: character convolution models.
	0101 example: many-to-one and one-to-many mt training.  mt models that fix the hidden state.  swapping input-output languages fixing the hidden state.  learning paraphrase models from mt models.
	0101 example: need something for turkish translation to report to tubitak
	0101 example: try pre-training for low resource mt: we can use rnnlm or copy, may need permutation matrix before encoder. work on pretraining for low resource translation using s2s or lm models.
	0101 example: try s2s model in turkish translation: jonmay sent link to low density translation data.
	0102 example: yonatan supertagging
	0105 example: onur/ozan ner bidirectional model version 2. try dropout and other architectures for ner.
	0106 example: karpathy character based models, generating wikipedia etc. inputless networks with random generators
	0107 example: aliya ipa example: "Bi-directional conversion between graphemes and phonemes using a joint n-gram model.", "http://arxiv.org/pdf/1506.00196v3.pdf"
	0124 example: attention s2s model
	0125 example: ntm and variants.
	0126 example: ctc apply speech model to mt
	0127 example: image captioning example
	0129 example: rnn based parser. ashish.
	0130 example: language learning in minecraft