@@ -6,15 +6,20 @@ back_reads_x(::Dot)=true
 back_reads_y(::Dot)=false
 
 function forw(::Dot, x1, x2, y; o...)
-    if x1 == nothing || x2 == nothing
-        return nothing
-    end
+    (y === x1 || y === x2) && error("No array sharing in dot.")
+    (x1 == nothing || x2 == nothing) && return nothing
     A_mul_B!(y, x1, x2)
 end
 
 function back(::Dot, dy, dx1, dx2; x=nothing, o...)
-    dx1 != nothing && (x[2] != nothing ? A_mul_Bt!(dx1, dy, x[2]) : fillsync!(dx1, 0))
-    dx2 != nothing && (x[1] != nothing ? At_mul_B!(dx2, x[1], dy) : fillsync!(dx2, 0))
+    if dx1 != nothing
+        (dx1 === dy || dx1 === x[2]) && error("No array sharing in dot.")
+        (x[2] != nothing ? A_mul_Bt!(dx1, dy, x[2]) : fillsync!(dx1, 0))
+    end
+    if dx2 != nothing
+        (dx2 === dy || dx2 === x[1]) && error("No array sharing in dot.")
+        (x[1] != nothing ? At_mul_B!(dx2, x[1], dy) : fillsync!(dx2, 0))
+    end
 end
 
 function infersize(d::Dot,a,b,c)
